# PETproject

./: .gitignore  LICENSE  README.md  er.name ellrckt  gitWorkFlow.md  start_app.txt  test_github.txt  todo.md
backend/: requirements.txt  todo.md
backend/testApp/: alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  s3_keys.py  start_app.py
backend/testApp/S3/: s3_client.py
backend/testApp/auth/: googleauth.py  state_storage.py  utils.py
backend/testApp/db/: db.py
backend/testApp/migrations/: env.py
backend/testApp/migrations/versions/: 2025_04_15_2128-5f0401acc0a9_добавить_новое_поле_в_модель.py  2025_04_15_2134-b8c0b5d87f9e_2.py  2025_06_30_2033-c093696fe9eb_added_email_confirmation.py  2025_07_30_0102-5fbfb9317cdd_.py  2025_07_30_1921-0023bf092260_init.py  2025_07_31_2316-a73360f76309_remove_postgis_tiger_geocoder.py  2025_08_04_0311-285c102156b8_fix_usersession_foreign_key.py  (+12 more)
backend/testApp/models/: file.py  habits.py  location.py  profiles.py  session.py  user.py
backend/testApp/redis/: redis_profile_service.py
backend/testApp/redis_service/: redis_profile_service.py
backend/testApp/repository/: auth.py  location.py  profile.py  session.py  user.py
backend/testApp/routers/: auth.py  location.py  login.py  profiles.py  user.py  user_registration.py
backend/testApp/services/: auth.py  location.py  profile.py  user.py
backend/testApp/testapp/: dependencies.py
backend/testApp/uploads/: lab1.docx
backend/testApp/utils/: auth_repository.py  location_repository.py  profile_repository.py  redis_repository.py  user_repository.py
(+61 files in other folders)
